--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[66, 79, 78, 42, 34, 60, 18, 93, 77, 88, 0, 1, 32, 17, 89, 61, 48, 15, 50, 90, 51, 8, 6, 84, 3, 37, 12, 68, 33, 92, 21, 2, 97, 71, 35, 26, 98, 96, 59, 85, 43, 72, 49, 29, 54, 11, 81, 9, 67, 64, 80, 24, 53, 45, 52, 36, 69, 46, 94, 57, 73, 25, 41, 19, 99, 63, 22, 40, 58, 10, 31, 13, 70, 82, 14, 62, 28, 76, 74, 75]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_1 = random.sample(range(100), k=80)\n",
+    "\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +64,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1 = set(sample_list_1)\n",
+    "\n",
+    "len(set1)\n",
+    "\n",
+    "#yes"
    ]
   },
   {
@@ -77,11 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 10, 31, 27, 95, 51, 64, 79, 78, 88, 25, 61, 27, 41, 38, 96, 57, 98, 97, 65, 37, 72, 82, 32, 90, 70, 71, 63, 73, 94, 34, 12, 51, 33, 47, 52, 70, 57, 59, 43, 93, 62, 19, 33, 18, 40, 43, 48, 2, 74, 17, 84, 75, 99, 88, 19, 31, 59, 96, 30, 58, 72, 54, 76, 17, 48, 9, 49, 91, 23, 1, 85, 17, 35, 62, 30, 5, 29, 18, 35]\n",
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "sample_list_2 = []\n",
+    "\n",
+    "for i in range(80):\n",
+    "    sample_list_2.append(random.randint(0, 100))\n",
+    "\n",
+    "print(sample_list_2)\n",
+    "    \n",
+    "print(len(sample_list_2))"
    ]
   },
   {
@@ -93,11 +134,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61\n",
+      "{0, 1, 2, 5, 9, 10, 12, 17, 18, 19, 23, 25, 27, 29, 30, 31, 32, 33, 34, 35, 37, 38, 40, 41, 43, 47, 48, 49, 51, 52, 54, 57, 58, 59, 61, 62, 63, 64, 65, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 88, 90, 91, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "print(len(set2))\n",
+    "\n",
+    "print (set2)\n",
+    "\n",
+    "#Al convertirlo en un SET, ordena los valores y elimina duplicados."
    ]
   },
   {
@@ -109,11 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6, 8, 11, 13, 14, 15, 21, 22, 24, 26, 28, 36, 42, 45, 46, 50, 53, 60, 66, 67, 68, 69, 77, 80, 81, 89, 92}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1.difference(set2)\n",
+    "\n",
+    "print (set3)"
    ]
   },
   {
@@ -125,11 +192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{65, 5, 38, 91, 47, 23, 27, 30, 95}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +219,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 9, 10, 12, 17, 18, 19, 25, 29, 31, 32, 33, 34, 35, 37, 40, 41, 43, 48, 49, 51, 52, 54, 57, 58, 59, 61, 62, 63, 64, 70, 71, 72, 73, 74, 75, 76, 78, 79, 82, 84, 85, 88, 90, 93, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1.intersection(set2)\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "if (len(set1) + len(set2) - (len(set5))) == (len(set3) + len(set5) + len(set4)):\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
@@ -181,11 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set6 = set()\n",
+    "\n",
+    "print (set6)"
    ]
   },
   {
@@ -197,11 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 6, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 40, 41, 42, 43, 45, 46, 48, 49, 50, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 92, 93, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "\n",
+    "set6.update(set3, set5)\n",
+    "\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +333,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print((set1)==(set6))"
    ]
   },
   {
@@ -229,11 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "set1.issubset(set2)\n",
+    "set1.issubset(set3)\n"
    ]
   },
   {
@@ -247,11 +384,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n",
+      "{0, 1, 2, 3, 5, 6, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "x = set3.union(set4, set5)\n",
+    "print(x)\n",
+    "\n",
+    "z = set1.union(set2)\n",
+    "print(z)"
    ]
   },
   {
@@ -263,11 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 6, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 40, 41, 42, 43, 45, 46, 48, 49, 50, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 92, 93, 94, 96, 97, 98, 99}\n",
+      "{3, 6, 8, 9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 28, 29, 31, 32, 33, 34, 35, 36, 37, 40, 41, 42, 43, 45, 46, 48, 49, 50, 51, 52, 53, 54, 57, 58, 59, 60, 61, 62, 63, 64, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 84, 85, 88, 89, 90, 92, 93, 94, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print (set1)\n",
+    "\n",
+    "set1.pop()\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +446,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 6, 8, 10, 12, 13, 14, 15, 17, 18, 22, 24, 25, 26, 28, 32, 33, 34, 35, 36, 37, 40, 42, 43, 45, 46, 48, 50, 52, 53, 54, 57, 58, 60, 62, 63, 64, 66, 67, 68, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 84, 85, 88, 90, 92, 93, 94, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for i in list_to_remove:\n",
+    "    if i in set1:\n",
+    "        set1.remove(i)\n",
+    "        \n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
