--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -21,24 +21,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
     "num=76"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2926\n"
+     ]
+    }
+   ],
    "source": [
     "def summation(num):\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return(sum(i for i in range(1,num+1)))\n",
+    "\n",
+    "print(summation(num))"
    ]
   },
   {
@@ -52,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,14 +71,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation2(*args):\n",
     "    # This function returns the sum of *args\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return(sum(i for i in args))\n",
+    "\n",
+    "print(summation2(*array))"
    ]
   },
   {
@@ -80,14 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "def summation3(a, b, c):\n",
     "    # This function returns a+b+c\n",
     "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    n=[a,b,c]\n",
+    "    return(sum(i for i in n))\n",
+    "\n",
+    "print(summation3(*array))\n"
    ]
   },
   {
@@ -99,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
    "source": [
     "def summation4(**kwargs):\n",
     "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    " \n",
+    "    # Your code here:\n",
+    "    return(sum(kwargs[i] for i in kwargs if i != \"red\"))\n",
+    "\n",
+    "print(summation4(**dictionary))"
    ]
   },
   {
@@ -127,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,14 +184,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "769\n"
+     ]
+    }
+   ],
    "source": [
-    "def summation5(.....):\n",
+    "def summation5(*args,**kwargs):\n",
     "    # This function returns the sum of a,b,c,d and e\n",
     "    # You need to define the function input\n",
-    "    # Your code here:"
+    "    # Your code here:\n",
+    "    return sum(args)+sum(kwargs.values())\n",
+    "print(summation5(a,b,c,*d,**e))"
    ]
   },
   {
@@ -161,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +284,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-74-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mStopIteration\u001b[0m: "
      ]
     }
@@ -243,9 +297,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
     "# Note: we cannot go back directly in an iterator once we have traversed through the elements. \n",
@@ -254,7 +318,8 @@
     "iterator = iter([1,2,3])\n",
     "\n",
     "for i in iterator:\n",
-    "    print(i)"
+    "    print(i)\n",
+    "    "
    ]
   },
   {
@@ -266,10 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "def divisible2(iterator):\n",
     "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
     "    # Input: Iterable\n",
@@ -279,6 +355,16 @@
     "    # Sample Output: 2\n",
     "    \n",
     "    # Your code here:\n",
+    "    ret=0\n",
+    "    for i in iterator:\n",
+    "        if i%2==0:\n",
+    "            ret=i\n",
+    "            break\n",
+    "    return ret\n",
+    "\n",
+    "print(divisible2(iter([1,2,3])))\n",
+    "print(divisible2(iter([1,3,5])))\n",
+    "print(divisible2(iter([1,1,1,3,3,3,4,5,6,7,8,10,2])))\n",
     "    "
    ]
   },
@@ -293,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +399,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "iterator = firstn(5)\n",
+    "\n",
     "\n",
     "for i in iterator:\n",
     "    print(i)"
@@ -332,9 +431,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "def even_iterator(n):\n",
     "    # This function produces an iterator containing all even numbers between 0 and n\n",
@@ -345,7 +456,15 @@
     "    # Sample Output: iter([0, 2, 4])\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    number = 0\n",
+    "    while number < n:\n",
+    "        if number%2==0:\n",
+    "            yield number\n",
+    "        number = number + 1\n",
+    "        \n",
+    "ite=even_iterator(10)\n",
+    "for i in ite:\n",
+    "    print (i)"
    ]
   },
   {
